# MyGame

./: README.md  目录结构.txt
BG/apps/AppCore/: AppCore.csproj  AppCore.sln
BG/apps/AppCore/app/: BG_App.cs  BG_CoreService.cs
BG/apps/Common/common/: BG_Options.cs
BG/apps/GameServer/: GameServer.csproj
BG/apps/GameServer/application/: BG_GameServer.cs
BG/apps/GameServer/runtime/: actor.cs
BG/config/: load_config.json
BG/source/: CMakeLists.txt  Common_CmakeLists.txt
BG/source/client/: CMakeLists.txt
BG/source/infra/: CMakeLists.txt  bg_common_global_context.cpp  bg_common_global_context.h
BG/source/infra/common/command_config/: bg_command_config.cpp  bg_command_config.h
BG/source/infra/common/id_allocator/: bg_id_allocator.h
BG/source/infra/common/json/: bg_json_parser.cpp  bg_json_parser.h  demo.txt
BG/source/infra/common/log/: bg_log.cpp  bg_log.h
BG/source/infra/common/pool/: bg_memory_pool.h  bg_object_pool.h
BG/source/infra/common/thread/: bg_thread_pool.cpp  bg_thread_pool.h
BG/source/infra/common/type/: bg_base_type.h
BG/source/infra/common/utils/: utils.cpp  utils.h
BG/source/infra/network/connection/: bg_connection_manager.cpp  bg_connection_manager.h  bg_net_connection_interface.cpp  bg_net_connection_interface.h
BG/source/infra/network/connection/kcp/: bg_kcp_connection.cpp  bg_kcp_connection.h
BG/source/infra/network/connection/ssl/: bg_ssl_connection.cpp  bg_ssl_connection.h
BG/source/infra/network/connection/tcp/: bg_tcp_connection.cpp  bg_tcp_connection.h
BG/source/infra/network/session/: bg_net_data_packet.cpp  bg_net_data_packet.h  bg_net_data_packet_manager.cpp  bg_net_data_packet_manager.h  bg_net_session.cpp  bg_net_session.h  bg_session_manager.cpp  bg_session_manager.h
BG/source/infra/script/: bg_script_manager.cpp  bg_script_manager.h
BG/source/infra/script/mono_runtime/: bg_mono_runtime.cpp
BG/source/precompile/: precompile.cmake
BG/source/server/backend_infra/: CMakeLists.txt  bg_backend_global_context.cpp  bg_backend_global_context.h
BG/source/server/backend_infra/mono_runtime/: bg_mono_runtime.cpp  bg_mono_runtime.h
BG/source/server/backend_infra/service_discovery/: bg_service_discovery.cpp
BG/source/server/game_server/: CMakeLists.txt  main.cpp
BG/source/server/game_server/framework/: bg_framework.cpp  bg_framework.h
BG/source/server/game_server/script/: bg_script_manager.cpp  bg_script_manager.h
BG/source/server/test_server/: CMakeLists.txt
BG/source/server/test_server/framework/: bg_framework.cpp  bg_framework.h
BG/source/server/test_server/script/: bg_script_manager.cpp
BG/source/test_client/: CMakeLists.txt
BG/source/test_client/framework/: bg_framework.cpp
Documents/工作内容/: 实现清单.xlsx
Documents/方案选择/: c++如何接入mono.md  orlenas介绍.md
Documents/笔记/: cppsharp构建过程.md  构建选择.md  语言选择.md
test/: .gitignore
test/TestMono/: CMakeLists.txt
test/TestMono/source/: main.cpp
tools/microsoft.netcore.app.runtime.mono.linux-x64.7.0.2/: .signature.p7s  Microsoft.NETCore.App.Runtime.Mono.linux-x64.nuspec  Microsoft.NETCore.App.versions.txt  [Content_Types].xml
tools/microsoft.netcore.app.runtime.mono.linux-x64.7.0.2/_rels/: .rels
tools/microsoft.netcore.app.runtime.mono.linux-x64.7.0.2/data/: RuntimeList.xml
tools/microsoft.netcore.app.runtime.mono.linux-x64.7.0.2/runtimes/linux-x64/lib/net7.0/: Microsoft.NETCore.App.deps.json
tools/microsoft.netcore.app.runtime.mono.win-x64.7.0.2/: .signature.p7s  Microsoft.NETCore.App.Runtime.Mono.win-x64.nuspec  [Content_Types].xml
tools/microsoft.netcore.app.runtime.mono.win-x64.7.0.2/_rels/: .rels
tools/microsoft.netcore.app.runtime.mono.win-x64.7.0.2/data/: RuntimeList.xml
